--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
 
-    <link rel="stylesheet" href="../CSS/html2.css"> <!--link for CSS FILE -->
+    <link rel="stylesheet" href="CSS/html2.css"> <!--link for CSS FILE -->
 
-    <script src="../javascript/val_calc_html2.js" defer></script> <!--file for calculation-->
-    <script src="../javascript/ui_comp_html2.js" defer></script> <!--to check UI-->
-    <script src="../javascript/test_case_html2.js" defer></script> <!--test cases file-->
+    <script src="javascript/val_calc_html2.js" defer></script> <!--file for calculation-->
+    <script src="javascript/ui_comp_html2.js" defer></script> <!--to check UI-->
+    <script src="javascript/test_case_html2.js" defer></script> <!--test cases file-->
     <!-- <script src="../javascript/testfile.js" defer></script> test cases file -->
 </head>
 <body>
